Weitere Icons ersetzt durch Jameica Icons (#126)
* Weitere Icons ersetzt durch Jameica Icons

Editieren edit.png -> text-x-generic.png
Copy copy.png -> edit-copy-png
Neu Icon file.png -> document-new.png
Sync sync.png -> view-refresh.png
Kalendar calendar-alt.png -> office-calendar.png
CSV Icon code.png durch neues xsd.png ersetzt, habe weißem Rand aus code.png entfernt
list.png Icon verkleinert (transparenter Rand)
Email envelope.png durch envelope-opem.png ersetzt wie in views verwendet
Deprecated constructor calls ersetzt (bei Files die sowieso editiert wurden)

* einige edit-copy durch bearbeiten ersetzt

* Besseres Icon