@@ -205,14 +205,14 @@ public abstract class AbstractAdresseDetailView extends AbstractView
       // können
       buttons
           .addButton(new Button("Duplizieren", new MitgliedDuplizierenAction(),
-              control.getCurrentObject(), false, "copy.png"));
+              control.getCurrentObject(), false, "edit-copy.png"));
     }
     buttons.addButton("Mail", new MitgliedMailSendenAction(),
         getCurrentObject(), false, "envelope-open.png");
     // buttons.addButton("neue Mail", new MailDetailAction(),
     // control.getCurrentObject(), false, "document-new.png");
     buttons.addButton("Neu", (isMitgliedDetail() ? new MitgliedDetailAction()
-        : new AdresseDetailAction()), null, false, "file.png");
+        : new AdresseDetailAction()), null, false, "document-new.png");
 
     buttons.addButton("Löschen",
         (isMitgliedDetail() ? new MitgliedDeleteAction()
@@ -248,7 +248,7 @@ public abstract class AbstractAdresseDetailView extends AbstractView
 
       MitgliedDokument mido = (MitgliedDokument) Einstellungen.getDBService()
           .createObject(MitgliedDokument.class, null);
-      mido.setReferenz(new Long(control.getMitglied().getID()));
+      mido.setReferenz(Long.valueOf(control.getMitglied().getID()));
       DokumentControl dcontrol = new DokumentControl(this, "mitglieder", true);
       cont.addPart(dcontrol.getDokumenteList(mido));
       ButtonArea butts = new ButtonArea();
